--- a/content/papers/10.md
+++ b/content/papers/10.md
@@ -7,8 +7,6 @@ date = "2019-05-19T21:12:00-00:00"
 Youhei Akimoto, Shinichi Shirakawa, Nozomu Yoshinari, Kento Uchida, 
 **Shota Saito**, and Kouhei Nishida: Adaptive Stochastic Natural Gradient 
 Method for One-Shot Neural Architecture Search, The 36th International 
-Conference on Machine Learning (ICML) (2019) (Accepted).  
-
-**※ Acceptance Rate: 773 / 3424 ≒ 22.6%**
+Conference on Machine Learning (ICML) (2019) (Accepted).  **※ Acceptance Rate: 773 / 3424 ≒ 22.6%**
 
 <!--more-->
