--- a/content/papers/10.md
+++ b/content/papers/10.md
@@ -4,9 +4,32 @@ date = "2019-05-19T21:12:00-00:00"
 
 +++
 
-Youhei Akimoto, Shinichi Shirakawa, Nozomu Yoshinari, Kento Uchida, 
-**Shota Saito**, and Kouhei Nishida: Adaptive Stochastic Natural Gradient 
-Method for One-Shot Neural Architecture Search, The 36th International 
-Conference on Machine Learning (ICML) (2019) (Accepted).  **※ Acceptance Rate: 773 / 3424 ≒ 22.6%**
+Youhei Akimoto, Shinichi Shirakawa, Nozomu Yoshinari, Kento Uchida, **Shota Saito**, and Kouhei Nishida: Adaptive Stochastic Natural Gradient Method for One-Shot Neural Architecture Search,Proceedings of the 36th International Conference on Machine Learning (ICML), Vol. 97 of PMLR, pp. 171-180 (2019).  **※ Acceptance Rate: 22.6% ≒ 773 / 3424**
 
 <!--more-->
+
+## Abstract
+High sensitivity of neural architecture search (NAS) methods against their input such as step-size (i.e., learning rate) and search space prevents practitioners from applying them out-of-the-box to their own problems, albeit its purpose is to automate a part of tuning process. Aiming at a fast, robust, and widely-applicable NAS, we develop a generic optimization framework for NAS. We turn a coupled optimization of connection weights and neural architecture into a differentiable optimization by means of stochastic relaxation. It accepts arbitrary search space (widely-applicable) and enables to employ a gradient-based simultaneous optimization of weights and architecture (fast). We propose a stochastic natural gradient method with an adaptive step-size mechanism built upon our theoretical investigation (robust). Despite its simplicity and no problem-dependent parameter tuning, our method exhibited near state-of-the-art performances with low computational budgets both on image classification and inpainting tasks. 
+
+## Paper
+- [PMLR](http://proceedings.mlr.press/v97/akimoto19a.html)
+- [ArXiv](https://arxiv.org/abs/1905.08537)
+- [Code on GitHub](https://github.com/shirakawas/ASNG-NAS)
+
+## Citation
+```
+@InProceedings{pmlr-v97-akimoto19a,
+  title = {{Adaptive Stochastic Natural Gradient Method for One-Shot Neural Architecture Search}},
+  author = {Akimoto, Youhei and Shirakawa, Shinichi and Yoshinari, Nozomu and Uchida, Kento and Saito, Shota and Nishida, Kouhei},
+  booktitle = {Proceedings of the 36th International Conference on Machine Learning},
+  pages = {171--180},
+  year = {2019},
+  editor = {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
+  volume = {97},
+  series = {Proceedings of Machine Learning Research},
+  address = {Long Beach, California, USA},
+  month = {09--15 Jun},
+  publisher = {PMLR},
+  url = {http://proceedings.mlr.press/v97/akimoto19a.html},
+}
+```
